# SDL_socket_test

./: CMakeLists.txt  README.md
src/client/: testClient.cpp
src/common/: message.h  rect.h
src/server/: testServer.cpp
